# ScriptXTestLibs

./: README.md
jsc/linux64/: README
linux64/v8/: args.gn
lua/: CMakeLists.txt
lua/include/: README  lua.hpp
python/linux64/include/: pyconfig.h
python/linux64/lib/python3.10/: _sysconfigdata__linux_x86_64-linux-gnu.py
python/linux64/lib/python3.10/config-3.10-x86_64-linux-gnu/: Makefile
python/win64/embed-env/: LICENSE.txt
python/win64/embed-env/DLLs/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _ctypes_test.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _msi.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _testbuffer.pyd  _testcapi.pyd  _testconsole.pyd  _testimportmultiple.pyd  _testinternalcapi.pyd  _testmultiphase.pyd  _tkinter.pyd  _uuid.pyd  _zoneinfo.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd  winsound.pyd
python/win64/embed-env/libs/: python3.lib  sqlite3.lib
quickjs/: CMakeLists.txt
quickjs/include/: quickjs.h
quickjs/src/: Makefile  quickjs.c  quickjs.h
quickjs/src/examples/: hello.cpp
v8/mac_arm64/: args.gn  v8_build_config.json
win64/jsc/: readme.txt
win64/lua/: Lua54.lib
