is_debug = false
target_cpu = "arm64"
v8_monolithic=true
is_component_build=false

v8_enable_i18n_support=false
v8_enable_webassembly=false # sammller binary
v8_enable_turbofan=false
v8_enable_sandbox=false

v8_use_external_startup_data=false
#is_clang = false
use_sysroot=false
use_glib=false
use_custom_libcxx=false
